--- a/.github/workflows/android_ktlint.yml
+++ b/.github/workflows/android_ktlint.yml
@@ -1,70 +1,12 @@
+
 name: KtLint
-on: [pull_request, push]
-
-# Add permissions for the workflow
-permissions:
-  contents: read
-  pull-requests: write
-  issues: write
-
+on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Run ktlint format
-        run: ./gradlew ktlintFormat
-
-      - name: Check for formatting changes
-        id: format-check
-        run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "changes=true" >> $GITHUB_OUTPUT
-            echo "Files were formatted by ktlint. Please commit the changes."
-            git diff
-          else
-            echo "changes=false" >> $GITHUB_OUTPUT
-            echo "No formatting changes needed."
-          fi
-
-      - name: Run ktlint check
-        run: ./gradlew ktlintCheck
-
-      - name: Comment PR with formatting changes
-        if: steps.format-check.outputs.changes == 'true' && github.event_name == 'pull_request'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '🔧 **ktlint formatting changes detected**\n\nThis PR contains code that was automatically formatted by ktlint. Please review and commit the formatting changes.\n\nYou can run `./gradlew ktlintFormat` locally to apply the same formatting.'
-            })
-
-      - name: Fail if formatting changes needed
-        if: steps.format-check.outputs.changes == 'true'
-        run: |
-          echo "❌ Code formatting issues detected. Please run './gradlew ktlintFormat' and commit the changes."
-          exit 1
+      - name: KtLint format app
+        run:  ./gradlew ktlintCheck
