refactor place of main activity and just creating a aimple navigations tack screen next i will set up some other stuff

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@ Thumbs.db
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 .idea
 
+entry-point/build
 feature/characters/build
 feature/quizzes/build
