--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PotterHead">
         <activity
-            android:name=".MainActivity"
+            android:name="com.nicholas.rutherford.potter.head.entry.point.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PotterHead">
