setup base arch of the project final

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,6 @@ proguard/
 # Eclipse Metadata
 .metadata/
 
-app/build
-compose/ui-theme/build
-
 local.properties
 
 # Mac OS X clutter
@@ -42,6 +39,11 @@ Thumbs.db
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 .idea
 
+app/build
+compose/ui-theme/build
+database/build
 entry-point/build
 feature/characters/build
 feature/quizzes/build
+model/build
+network/build
