--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ Thumbs.db
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 .idea
 
+.kotlin/errors
+
+build
+
 app/build
 compose/ui-theme/build
 database/build
